--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,5 @@ remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 gem "github-pages", group: :jekyll_plugins
-title: [The title of your site]
+title: [https://alfredojwang.github.io/hzhuang/]
 description: [A short description of your site purpose]
-github:
-  is_project_page: false
