--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 gem "github-pages", group: :jekyll_plugins
 description: [A short description of your site purpose]
+
+theme: jekyll-theme-hacker
