--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
 title: Homepage - Hao Zhuang
-description: There is nothing to say.
+description: Noncommutative Geometry, Partial Differential Equations, Machine Learning, Data Science.
