--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
-title: alfredojwang.github.io/hzhuang/
+title: Hao Zhuang
 description: Noncommutative Geometry, Partial Differential Equations, Machine Learning, Data Science.
